styles/style.css
@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;1,100;1,200;1,300;1,400;1,500;1,600&display=swap');

/*
=========== 
variables 
============
*/

:root {
    --clr-purple: #663399;
    --clr-light-grey: #eee;
    /* transition */
    --transition: transition: all ease .6s;
}


/* Start global */

* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

html {
    font-size: 10px;
    font-family: 'Poppins', sans-serif;
    color: var(--clr-light-grey);
    overflow-x: hidden;
}

body {
    width: 100%;
    height: auto;
    background: url("../assets/sitebg3.jpg") no-repeat top fixed;
    background-size: cover;
    /* min-width: 100%; */
}

a {
    text-decoration: none;
    color: var(--clr-light-grey);
    letter-spacing: 1px;
}

p {
    font-size: 1.5rem;
    font-weight: 200;
    letter-spacing: 1px;
    color: var(--clr-light-grey);
}

h1,
h6 {
    letter-spacing: 5px;
}

li {
    margin: 0 2rem;
}

img {
    width: 100%;
    max-width: 600px;
}

.container {
    width: 90%;
    max-width: 120rem;
    height: 100%;
    margin: 0 auto;
    position: relative;
}

section {
    padding: 4rem;
}

.has-margin-right {
    margin-right: 3.5rem;
}


/*
======================  
         Header 
======================
*/

.section-heading {
    text-align: center;
    margin-top: 10rem;
    margin-bottom: 10rem;
}

.section-heading h1 {
    font-size: 3.5rem;
    font-weight: 300;
    text-transform: uppercase;
    position: relative;
    margin-bottom: 3rem;
    background: linear-gradient(to top, #B891E1, #25007a);
    background-clip: text;
    -webkit-background-clip: text;
    -webkit-text-fill-color: transparent;
}

.section-heading h1::before,
.section-heading h1::after {
    content: '';
    position: absolute;
    bottom: -.5rem;
    left: 50%;
    transform: translateX(-50%);
    background: rgba(255, 255, 255, .95);
    z-index: 10;
}

.section-heading h1::before {
    width: 30rem;
    height: 3px;
    border-radius: .8rem;
}

.section-heading h1::after {
    width: 1.5rem;
    height: 1.5rem;
    border-radius: 100%;
    bottom: -1rem;
}

.section-heading h6 {
    font-size: 2.6rem;
    font-weight: 300;
}

header {
    width: 100%;
    height: 100vh;
}

.top-nav {
    width: 100%;
    height: 100vh;
    position: fixed;
    top: -100vh;
    z-index: 50;
    background: #16162d;
    border-bottom-right-radius: 100%;
    border-bottom-left-radius: 100%;
    transition: all .5s cubic-bezier(1, 0, 0, 1);
}

.top-nav.open {
    top: 0;
    border-radius: initial;
}

.nav-list {
    list-style: none;
    width: 100%;
    height: 100%;
    display: flex;
    justify-content: center;
    align-items: center;
    background: rgb(0, 0, 0);
    background: linear-gradient(180deg, rgba(0, 0, 0, 1) 62%, rgba(16, 8, 24, 1) 86%, rgba(34, 20, 52, 0.9640231092436975) 100%);
}

.nav-list span {
    padding: 0 10px;
    font-size: 1.2rem;
    border: 2px solid transparent;
    outline: none;
    transition: all ease .6s;
}

.nav-list span:hover {
    animation: pulse 2s infinite;
    border: 3px solid transparent;
}

.nav-list a {
    font-size: 4rem;
    background: linear-gradient(to top, #B891E1, #25007a);
    background-clip: text;
    -webkit-background-clip: text;
    -webkit-text-fill-color: transparent;
}

.nav-link {
    font-size: 5rem;
    padding: 1rem;
}

.landing-text {
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    width: 100%;
    text-align: center;
    z-index: 1;
}

.landing-text h1 {
    font-size: 8rem;
    font-weight: 300;
    background: linear-gradient(to top, #B891E1, #25007a);
    background-clip: text;
    -webkit-background-clip: text;
    -webkit-text-fill-color: transparent;
}

.landing-text h6 {
    font-size: 2rem;
    font-weight: 300;
}

.landing-text .resume {
    padding: 1rem 2.5rem;
    margin-top: 2.5rem;
    font-size: 1.2rem;
    text-transform: uppercase;
    border: 3px solid var(--clr-purple);
    background: transparent;
    outline: none;
    color: var(--clr-light-grey);
    transition: all ease .6s;
}

.landing-text .resume:hover {
    animation: pulse 2s infinite;
    border: 3px solid var(--clr-purple);
    background: var(--clr-purple);
}

.landing-text .resume .fas {
    font-size: 1.5rem;
    margin-left: 5px;
}


/*
==========================
     hamburger menu
==========================
*/

.toggler-wrapper {
    background: #0B0B0B;
    width: 65px;
    height: 65px;
    border-radius: 100%;
    position: fixed;
    z-index: 1500;
    top: 17px;
    right: 23px;
    -webkit-box-shadow: 0px 0px 24px -4px rgb(202, 152, 255);
    -moz-box-shadow: 0px 0px 24px -4px rgb(202, 152, 255);
    box-shadow: 0px 0px 24px -4px rgb(202, 152, 255);
}

.menu-toggler {
    position: fixed;
    top: 34px;
    right: 32px;
    width: 45px;
    height: 30px;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    cursor: pointer;
    transition: transform .65s ease-out;
}

.menu-toggler.open {
    transform: rotate(-45deg);
}

.bar {
    background: linear-gradient(to right, #B891E1, #25007a);
    width: 100%;
    height: 4.5px;
    border-radius: .8rem;
    padding: 3px;
}

.bar.half {
    width: 50%;
}

.bar.start {
    transform-origin: right;
    transition: transform .65s cubic-bezier(0.54, -0.81, 0.57, 0.57);
}

.open .bar.start {
    transform: rotate(-450deg) translateX(.8rem);
}

.bar.end {
    transform-origin: left;
    align-self: flex-end;
    transition: transform .65s cubic-bezier(0.54, -0.81, 0.57, 0.57);
}

.open .bar.end {
    transform: rotate(-450deg) translateX(-.8rem);
}


/*
======================
     About section
========================
*/

.about .container {
    display: flex;
    align-items: center;
    justify-content: center;
}

.about-heading {
    display: flex;
    text-transform: uppercase;
    line-height: 0;
    margin-bottom: 6rem;
}
/* ... */

